# ouro

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCH.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  cli.py  config.py  harbor-run.sh  interactive.py  main.py  pyproject.toml  requirements.txt  test_git_file.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
agent/: CLAUDE.md  __init__.py  agent.py  base.py  composition.py  context.py  plan_execute_agent.py  plan_files.py  profile.py  react_agent.py  runtime.py  steering.py  task_policy.py  tasks.py  todo.py  tool_executor.py  verification.py
agent/prompts/: __init__.py  composition_prompts.py
agent/skills/: __init__.py  installer.py  parser.py  registry.py  render.py  types.py
bot/: LARK.md  README.md  SLACK.md  WECHAT.md  __init__.py  proactive.py  server.py  session_router.py  soul.py
bot/channel/: __init__.py  base.py  feishu.py  lark.py  slack.py  wechat.py
docs/: CLAUDE.md  advanced-features.md  agents-md-guide.md  bot-guide.md  cli-guide.md  configuration.md  examples.md  extending.md  memory-management.md  memory_persistence.md  packaging.md  protocol-jsonl.md  ptk-tuned-mode.md  ptk2-spike.md  task-v2.md  tasks-subagents.md  tool_result_processing.md  trace-monitor.md
examples/: agent_example.py  memory_persistence_demo.py  plan_execute_example.py  quick_start_persistence.py  react_example.py  tasks_v1_demo.py  test_memory.py  web_fetch_example.py
harbor/: install-ouro.sh.j2
llm/: __init__.py  anthropic_llm.py  base.py  chatgpt_auth.py  compat.py  content_utils.py  copilot_auth.py  gemini_llm.py  litellm_adapter.py  model_manager.py  model_router.py  oauth_model_catalog.py  oauth_model_sync.py  openai_llm.py  reasoning.py  retry.py
memory/: __init__.py  code_extractor.py  compressor.py  graph.py  manager.py  scope.py  short_term.py  store.py  token_tracker.py  tool_result_processor.py  tool_result_store.py  types.py
memory/long_term/: __init__.py  consolidator.py  embedding_client.py  indexer.py  store.py  vector_store.py
memory/store/: __init__.py  yaml_file_memory_store.py
orchestration/: v1.py
ouro/: CLAUDE.md  README.md  config.py
ouro/capabilities/: CLAUDE.md  README.md  __init__.py  _legacy_agent.py  _legacy_base.py  builder.py
ouro/core/: CLAUDE.md  README.md  __init__.py  log.py
ouro/interfaces/: CLAUDE.md  README.md
ouro_harbor/: README.md  install-ouro.sh.j2  ouro_agent.py
protocol/: __init__.py  events.py
rfc/: 002-tool-result-handling.md  003-asyncio-migration.md  004-composable-agent-architecture.md  004-composable-plan-tools.md  005-timer-notify.md  006-multi-model-v2.md  006-ralph-loop.md  007-memory-persistence-refactor.md  008-skills-system.md  009-codex-login-via-litellm-chatgpt.md  009-ptk2-unified-renderer-spike.md  010-multi-model-v2.md  010-reasoning-controls.md  010-token-counting-accuracy.md  011-skills-system.md  012-bot-mode.md  012-subagent-artifact-retrieval.md  016-agent-steering.md  CLAUDE.md  README.md  TEMPLATE.md  agent-tracing-monitor.md  agents-md-autoload.md  enhanced-plan-execute-agent.md  grep-content-improvements.md  heartbeat-system-prompt-injection.md  letta-inspired-memory.md  long-term-memory.md  loop-owned-message-list.md  loop-rules.md  nested-agents-md.md  parallel-tool-conflict-keys.md  ralph-loop.md  swarm-task-graph-execution.md  task-v2-agent-swarm-plan.md
roles/builtin/: coder.yaml
scripts/: _env.sh  bootstrap.sh  build.sh  check_repo_invariants.py  dev.sh  format.sh  gen_pr_body.py  install_local.sh  lint.sh  precommit.sh  publish.sh  test.sh  tui_mode_bench.py  tui_mode_compare.py  tui_redraw_bench.py  typecheck.sh  update_oauth_model_catalog.py
test/: CLAUDE.md  README.md  test_agent_profile.py  test_agents_md.py  test_attribution.py  test_basic.py  test_bot_message_queue.py  test_bot_proactive.py  test_bot_server.py  test_bot_session_router.py  test_bot_soul.py  test_chatgpt_auth.py  test_cli_json_mode.py  test_code_navigator.py  test_code_structure.py  test_composed_agent_no_memory.py  test_conversation_search_tool.py  test_copilot_auth.py  test_cron_tool.py  test_explore_tool.py  test_feishu_channel.py  test_heartbeat_tool.py  test_interactive_auth_commands.py  test_json_progress_sink.py  test_lark_channel.py  test_litellm_adapter.py  test_llm_adapter_factory.py  test_llm_retry.py  test_loop_rules.py  test_loop_usage_callback.py  test_main_auth_cli.py  test_memory.py  test_memory_block_edit_tool.py  test_message_list.py  test_model_manager_chatgpt.py  test_model_setup_session.py  test_multi_task.py  test_multi_turn_history.py  test_nested_agents_md.py  test_notify_integration.py  (+40 more)
test/agent/: test_composition.py  test_runtime.py
test/core/: test_agent_tracing.py  test_tracing.py
test/memory/: conftest.py  test_blocks.py  test_compressor.py  test_graph.py  test_integration.py  test_long_term.py  test_mem0_integration.py  test_memory_manager.py  test_recall_fts.py  test_serialization.py  test_session_persistence_hook.py  test_short_term.py  test_store.py  test_token_tracker.py  test_tool_result_processing.py  test_yaml_backend.py
test/swarm/: __init__.py  test_analyzer.py  test_builder_dispatch.py  test_dispatcher.py  test_planner.py  test_replanner.py  test_result_schema.py  test_runtime.py  test_swarm.py  test_synthesizer.py
test/tasks/: __init__.py  test_engine.py  test_store.py  test_task_claim.py  test_tools.py
tools/: __init__.py  advanced_file_ops.py  base.py  calculator.py  code_navigator.py  code_structure.py  delegation.py  explore.py  file_ops.py  git_tools.py  heartbeat_tool.py  memory_tools.py  multi_task.py  notify.py  parallel_execute.py  plan_files.py  session_manager.py  shell.py  shell_background.py  smart_edit.py  sub_agent_batch.py  task_board.py  task_tools.py  timer.py  todo.py  web_fetch.py  web_search.py
tui/: __init__.py  app.py  styles.tcss
tui/screens/: chat.py  help.py
tui/widgets/: header.py  (+2 more)
utils/: __init__.py  logger.py  model_pricing.py  runtime.py  skills.py  terminal_ui.py
(+164 files in other folders)
