[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AgenticLoop"
version = "0.1.0"
description = "General AI Agent System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "luohaha", email = "your.email@example.com"}
]
keywords = ["ai", "agent", "llm", "claude", "gpt", "gemini", "react", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=5.1.0,<6",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.28.0",
    "requests>=2.31.0",
    "trafilatura>=2.0.0",
    "lxml>=5.0.0",
    "litellm>=1.30.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.8.0,<1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0.0",
]

[project.urls]
Homepage = "https://github.com/luohaha/AgenticLoop"
Documentation = "https://github.com/luohaha/AgenticLoop#readme"
Repository = "https://github.com/luohaha/AgenticLoop"
Issues = "https://github.com/luohaha/AgenticLoop/issues"

[project.scripts]
aloop = "cli:main"

[tool.setuptools]
# Use current flat structure
packages = ["agent", "llm", "memory", "tools", "utils"]
py-modules = ["main", "interactive", "config", "cli"]

[tool.setuptools.package-data]
"*" = [".env.example"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
implicit_optional = true
disable_error_code = [
    "override",
    "name-defined",
    "var-annotated",
    "assignment",
    "misc",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live LLM integration tests (skipped unless RUN_INTEGRATION_TESTS=1)",
]
