[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouro-ai"
version = "0.3.1"
description = "General AI Agent System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "luohaha", email = "luoyixin6688@gmail.com"}
]
keywords = ["ai", "agent", "llm", "claude", "gpt", "gemini", "loop", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ddgs>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.28.0",
    "authlib>=1.3.0",
    "trafilatura>=2.0.0",
    "lxml>=5.0.0",
    "aiofiles>=24.1.0",
    "litellm>=1.81.1,<2.0",
    "PyYAML>=6.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "croniter>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "black==25.1.0",
    "isort==6.0.0",
    "mypy>=1.0.0",
    "ruff==0.9.10",
    "pre-commit>=3.0.0",
    "types-aiofiles>=25.1.0",
    "types-croniter>=1.3.0",
    "types-PyYAML>=6.0",
]

bot = ["aiohttp>=3.9.0", "lark-oapi>=1.4.0", "slack-sdk>=3.27.0", "weixin-bot-sdk>=0.1.0"]
harbor = ["harbor>=0.1.0"]

[project.urls]
Homepage = "https://github.com/ouro-ai-labs/ouro"
Documentation = "https://github.com/ouro-ai-labs/ouro#readme"
Repository = "https://github.com/ouro-ai-labs/ouro"
Issues = "https://github.com/ouro-ai-labs/ouro/issues"

[project.scripts]
ouro = "ouro.interfaces.cli.entry:main"

[tool.setuptools]
packages = [
    "ouro",
    "ouro.core",
    "ouro.core.llm",
    "ouro.core.loop",
    "ouro.capabilities",
    "ouro.capabilities.context",
    "ouro.capabilities.memory",
    "ouro.capabilities.memory.long_term",
    "ouro.capabilities.memory.store",
    "ouro.capabilities.prompts",
    "ouro.capabilities.skills",
    "ouro.capabilities.todo",
    "ouro.capabilities.tools",
    "ouro.capabilities.tools.builtins",
    "ouro.capabilities.verification",
    "ouro.interfaces",
    "ouro.interfaces.bot",
    "ouro.interfaces.bot.channel",
    "ouro.interfaces.cli",
    "ouro.interfaces.tui",
    "ouro_harbor",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"ouro_harbor" = ["*.j2"]
"ouro.capabilities.skills" = ["system/**"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
implicit_optional = true
disable_error_code = [
    "override",
    "name-defined",
    "var-annotated",
    "assignment",
    "misc",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "ASYNC", "B", "UP", "I", "SIM", "PERF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live LLM integration tests (skipped unless RUN_INTEGRATION_TESTS=1)",
]
